--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -74,7 +74,7 @@
         app:layout_constraintVertical_bias="0.784"
         app:srcCompat="@drawable/rewind_button" />
 
-    <ImageButton
+    <!--<ImageButton
         android:id="@+id/exitButton"
         style="?android:attr/borderlessButtonStyle"
         android:layout_width="64dp"
@@ -85,7 +85,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.916"
-        app:srcCompat="@drawable/stop_button" />
+        app:srcCompat="@drawable/stop_button" />-->
 
     <ImageButton
         android:id="@+id/next_button"
